# learning-companion

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  MY_ROADMAP.md  README.md  phase-0-draft.md  phase5-study-guide.md  pyproject.toml  telegram_sender.py
.github/scripts/: verify_secrets_baseline.py
.github/workflows/: ci.yml
Learning Companion/: skill.json
legacy/: agent-litellm.py  agent-raw.py  agent-sdk.py  gen_phase0_docx.py  learning_companion_v2.backup.py  make_docx.py
references/: phase4-full-eval-results.md
src/learning_companion/: __init__.py  __main__.py  alerts.py  bot.py  cli.py  eval.py  hardening.py  inspect_benchmark.py  ledger.py  llm.py  memory.py  prompt_cache.py  routing.py  security.py  settings.py  telegram.py
src/learning_companion/fetchers/: __init__.py
src/learning_companion/graph/: __init__.py  builder.py  nodes.py  tracing.py
tests/: golden.json  test_cli.py  test_eval.py  test_graph.py  test_inspect_benchmark.py  test_ledger.py  test_llm.py  test_memory.py  test_prompt_cache.py  test_routing_alerts.py  test_security.py  test_settings.py  test_telegram.py
